# project-2

./: .gitignore  LICENSE  README.md  agent.py  faux.py  fileup.py  forge-plots.ipynb  iochain.py  main.py  pyproject.toml  sandbox.py  utils.py
src/: faux.py  main.py  sandbox.py  utils.py
