[project]
name = "project-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "bs4>=0.0.2",
    "duckdb>=1.3.2",
    "fastapi>=0.116.1",
    "func-timeout>=4.3.5",
    "html5lib>=1.1",
    "httpx>=0.28.1",
    "ipython>=9.4.0",
    "llm>=0.26",
    "lxml>=6.0.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "plotly>=6.2.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "structlog>=25.4.0",
    "uvicorn>=0.35.0",
]
